Atualização de validação

--- a/Promovendo/src/main/webapp/confirm-cadastro.html
+++ b/Promovendo/src/main/webapp/confirm-cadastro.html
@@ -45,12 +45,12 @@
         <div class="container-controlador" id="controle-login">
             <div class="form">
                 <div class="trabalhe-conosco">
-                    <form action="pag-inicial-index.html" method="get">
+                    <form action="login.html" method="get">
                         <h1 id="titlle-cofirm">Cadastro confirmado</h1>
                         
                         <img src="img/green-check-pagamento.png" id="check-pagamento" alt="Pagamento confimado">
 
-                        <button type="submit" class="btn-comum" id="btn-enviar-banco">Retornar a Pagina inicial</button>
+                        <button type="submit" class="btn-comum" id="btn-enviar-banco">Logar</button>
 
                     </form>
                 </div>
