--- a/Promovendo/src/main/webapp/login.html
+++ b/Promovendo/src/main/webapp/login.html
@@ -45,12 +45,12 @@
         <div class="container-controlador" id="controle-login">
             <div class="form">
                 <div class="trabalhe-conosco">
-                    <form action="ValidacaoLogin" name="validacaoLogin">
+                    <form action="Logar" method="get" >
                         <h1>Login</h1>
                         <input type="text" placeholder="Email:" class="form-control" name="email">
-                        <input type="text" placeholder="senha:" class="form-control" name="senha">
+                        <input type="password" placeholder="senha:" class="form-control" name="senha">
                         <a href="">Esqueceu sua senha?</a>
-         
+         				
                         <button type="submit" class="btn-comum" id="btn-enviar-banco">Entrar</button>
 
                     </form>
